continue config neovim

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,12 +1,15 @@
 font:
   normal:
-    family: "MesloLGSDZ Nerd Font"
+    #family: "MesloLGSDZ Nerd Font"
+    family: "Cousine NF"
   bold:
-    family: "MesloLGSDZ Nerd Font"
+    family: "Cousine NF"
+    #family: "MesloLGSDZ Nerd Font"
   italic:
-    family: "MesloLGSDZ Nerd Font"
+    family: "Cousine NF"
+    #family: "MesloLGSDZ Nerd Font"
 
-  size: 14.0
+  size: 14.5
 
 mouse:
   hide_when_typing: true
@@ -17,49 +20,30 @@ selection:
 colors:
   # Default colors
   primary:
-    background: '#262627'
-    foreground: '#d6d6d6'
-
-    dim_foreground: '#dbdbdb'
-    bright_foreground: '#d9d9d9'
-    dim_background: '#202020' # not sure
-    bright_background: '#3a3a3a' # not sure
-
-  # Cursor colors
-  cursor:
-    text: '#2c2c2c'
-    cursor: '#d9d9d9'
+    background: '#303031'
+    foreground: '#abb2bf'
 
   # Normal colors
   normal:
-    black: '#1c1c1c'
-    red: '#bc5653'
-    green: '#909d63'
-    yellow: '#ebc17a'
-    blue: '#7eaac7'
-    magenta: '#aa6292'
-    cyan: '#86d3ce'
-    white: '#cacaca'
+    # NOTE: Use '#131613' for the `black` color if you'd like to see
+    # black text on the background.
+    black: '#282c34'
+    red: '#e06c75'
+    green: '#98c379'
+    yellow: '#d19a66'
+    blue: '#61afef'
+    magenta: '#c678dd'
+    cyan: '#56b6c2'
+    white: '#abb2bf'
 
   # Bright colors
   bright:
-    black: '#636363'
-    red: '#bc5653'
-    green: '#909d63'
-    yellow: '#ebc17a'
-    blue: '#7eaac7'
-    magenta: '#aa6292'
-    cyan: '#86d3ce'
-    white: '#f7f7f7'
-
-  # Dim colors
-  dim:
-    black: '#232323'
-    red: '#74423f'
-    green: '#5e6547'
-    yellow: '#8b7653'
-    blue: '#556b79'
-    magenta: '#6e4962'
-    cyan: '#5c8482'
-    white: '#828282'
-theme: Afterglow
+    black: '#5c6370'
+    red: '#e06c75'
+    green: '#98c379'
+    yellow: '#d19a66'
+    blue: '#61afef'
+    magenta: '#c678dd'
+    cyan: '#56b6c2'
+    white: '#ffffff'
+theme: One-Dark
