handle reconfig neovim with lua script

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,5 +1,9 @@
 {
     "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
+    "Lua.diagnostics.globals": [
+        "se",
+        "packer"
+    ],
     "Lua.runtime.version": "LuaJIT",
     "Lua.workspace.checkThirdParty": false,
     "Lua.workspace.library": [
