--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,13 +1,13 @@
 font:
   normal:
-    #family: "MesloLGSDZ Nerd Font"
-    family: "Cousine NF"
+    family: "MesloLGSDZ Nerd Font"
+    #family: "Cousine NF"
   bold:
-    family: "Cousine NF"
-    #family: "MesloLGSDZ Nerd Font"
+    #family: "Cousine NF"
+    family: "MesloLGSDZ Nerd Font"
   italic:
-    family: "Cousine NF"
-    #family: "MesloLGSDZ Nerd Font"
+    #family: "Cousine NF"
+    family: "MesloLGSDZ Nerd Font"
 
   size: 14.5
 
@@ -18,30 +18,32 @@ selection:
   save_to_clipboard: true
 
 colors:
-  name: Atelierforest (dark)
-  author: Chris Kempson
+  # Default colors
   primary:
-    background: "#1b1918"
-    foreground: "#a8a19f"
-  cursor:
-    text: "#1b1918"
-    cursor: "#a8a19f"
+    # hard contrast: background = '#1d2021'
+    background: '#282828'
+    # soft contrast: background = '#32302f'
+    foreground: '#ebdbb2'
+
+  # Normal colors
   normal:
-    black: "#1b1918"
-    red: "#f22c40"
-    green: "#5ab738"
-    yellow: "#d5911a"
-    blue: "#407ee7"
-    magenta: "#6666ea"
-    cyan: "#00ad9c"
-    white: "#a8a19f"
+    black: '#282828'
+    red: '#cc241d'
+    green: '#98971a'
+    yellow: '#d79921'
+    blue: '#458588'
+    magenta: '#b16286'
+    cyan: '#689d6a'
+    white: '#a89984'
+
+  # Bright colors
   bright:
-    black: "#766e6b"
-    red: "#f22c40"
-    green: "#5ab738"
-    yellow: "#d5911a"
-    blue: "#407ee7"
-    magenta: "#6666ea"
-    cyan: "#00ad9c"
-    white: "#f1efee"
-theme: Atelierforest.dark
+    black: '#928374'
+    red: '#fb4934'
+    green: '#b8bb26'
+    yellow: '#fabd2f'
+    blue: '#83a598'
+    magenta: '#d3869b'
+    cyan: '#8ec07c'
+    white: '#ebdbb2'
+theme: Gruvbox-Dark
