--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,36 +1,38 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": [
-    "css",
-    "sass",
-    "scss",
-    "markdown",
-    "html",
-    "json",
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact",
-    "python",
-    "lua",
-    "vim",
-    "spec"
-  ],
-  "python.formatting.provider": "black",
-  "python.formatting.blackPath": "~/.local/bin/black",
-  "prettier.singleQuote": true,
-  "javascript.autoClosingTags": true,
-  "typescript.autoClosingTags": true,
-  "emmet.includeLanguages": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact",
-    "html"
-  ],
-  "codeLens.enable": true,
-  "suggest.enablePreview": true,
-  "coc.preferences.hoverTarget": "float",
-  "diagnostic.enableMessage": "always",
-  "suggest.floatEnable": true,
-  "jest.watch": true
+	"coc.preferences.formatOnSaveFiletypes": [
+		"css",
+		"sass",
+		"scss",
+		"markdown",
+		"html",
+		"json",
+		"javascript",
+		"javascriptreact",
+		"typescript",
+		"typescriptreact",
+		"python",
+		"lua",
+		"vim",
+		"spec"
+	],
+	"python.formatting.provider": "black",
+	"python.formatting.blackPath": "~/.local/bin/black",
+	"prettier.singleQuote": true,
+	"javascript.autoClosingTags": true,
+	"typescript.autoClosingTags": true,
+	"emmet.includeLanguages": [
+		"javascript",
+		"javascriptreact",
+		"typescript",
+		"typescriptreact",
+		"html"
+	],
+	"codeLens.enable": true,
+	"suggest.enablePreview": true,
+	"coc.preferences.hoverTarget": "float",
+	"diagnostic.enableMessage": "always",
+	"suggest.floatEnable": true,
+	"jest.watch": true,
+    "eslint.autoFixOnSave": true,
+	"lua.enable": false
 }
