--- a/.luarc.json
+++ b/.luarc.json
@@ -1,11 +1,16 @@
 {
     "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
+    "Lua.diagnostics.disable": [
+        "lowercase-global"
+    ],
     "Lua.diagnostics.globals": [
         "se",
         "packer",
         "state",
         "filetypes",
-        "find_cmd"
+        "find_cmd",
+        "attach",
+        "attachToRemote"
     ],
     "Lua.runtime.version": "LuaJIT",
     "Lua.workspace.checkThirdParty": false,
